ecommerce-eks/k8s/policies/disallow-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-root
spec:
  # 🔽 Only report, do NOT block workloads
  validationFailureAction: audit
  background: true
  rules:
    - name: check-run-as-non-root
      match:
        any:
          - resources:
              kinds:
                - Pod
                - Deployment
                - StatefulSet
              namespaces:
                - shop        # only check your app namespace
      validate:
        message: "Running as root user is not allowed"
        pattern:
          spec:
            containers:
              - securityContext:
                  runAsNonRoot: true
